# tomni

./: .coveragerc  .gitignore  HISTORY.rst  LICENSE  MANIFEST.in  README.md  azure-pipelines-docs.yml  azure-pipelines.yml  integration.py  integration_annotation_manager.py  integration_annotations.py  integration_cdf.py  integration_cdf_annotations.py  integration_cdf_main.py  integration_json2mask.py  integration_mask.py  integration_mask2json.py  integration_requirements.txt  integration_scf_format.py  pull_request_template.md  pyproject.toml  requirements.txt  requirements_docs.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: annotation_manager.rst  apidocs.rst  bbox_operations.rst  conf.py  contour_operations.rst  general.rst  image_operations.rst  img_paste.rst  index.rst  json_operations.rst  make_mask.rst  polygon_downsampling.rst  quickstart.rst  shape_fitting.rst  transformers.rst  tutorials.rst
docs/AM_functions/: feature_functions.rst  from_functions.rst  to_functions.rst
docs/functions/bbox_operations/: bbox_fitting.rst  bbox_fitting_center.rst  check_overlap_bbox.rst  fit_rect_ellipse.rst
docs/functions/contour_operations/: approximate_circle_by_area.rst  circularity.rst  get_center.rst  roundness.rst
docs/functions/convert_color/: convert_color.rst
docs/functions/illumination_correction/: absolute_difference.rst  fluo_tophat.rst  relative_difference.rst
docs/functions/img_dim/: img_dim.rst
docs/functions/img_paste/: img_paste.rst
docs/functions/json_operations/: add_area.rst  add_center.rst  add_circularity.rst  cropping.rst  flipping.rst  rotation.rst  scale_json.rst  summary_json.rst  translation.rst
docs/functions/make_mask/: circlair_mask.rst  contour_mask_maker.rst  ellipse_mask.rst
docs/functions/polygon_downsampling/: iterative_downsampling.rst
docs/functions/shape_fitting/: fit_rect_ellipse.rst
docs/functions/transformers/: binary2contours.rst  contour2bbox.rst  contours2json.rst  ellipse2json.rst  json2bbox.rst  json2contours.rst  json2dict.rst  json2labels.rst  json2mask.rst  json2vgg.rst  labels2contours.rst  labels2listsOfPoints.rst  list_of_points2json.rst  mask2bbox.rst  mask2json.rst  positions2contour.rst  vgg2json.rst
docs/general/: annotation_manager.rst  axion_bio_format.rst
docs/make_mask/: circlair_mask.rst
docs/polygon_downsampling/: iterative_downsampling.rst
docs/shape_fitting/: fit_rect_ellipse.rst
docs/transformers/: binary2contours.rst  contour2bbox.rst  contours2json.rst  ellipse2json.rst  json2bbox.rst  json2contours.rst  json2dict.rst  json2labels.rst  json2mask.rst  json2vgg.rst  labels2contours.rst  labels2listsOfPoints.rst  list_of_points2json.rst  mask2bbox.rst  mask2json.rst  positions2contour.rst  vgg2json.rst
docs/tutorials/: roundness_vs_circularity.rst
src/tomni/: __init__.py
src/tomni/annotation_manager/: __init__.py  test_annotation_manager.py
src/tomni/bbox_fitting/: __init__.py
src/tomni/bbox_operations/: __init__.py
src/tomni/convert_color/: __init__.py
src/tomni/illumination_correction/: __init__.py
src/tomni/img_dim/: __init__.py  main.py  test_imgDim.py
src/tomni/img_paste/: __init__.py  test_img_paste.py
src/tomni/shape_fitting/: __init__.py
tomni/: __init__.py
tomni/annotation_manager/: DevReadme.md  main.py  test_annotation_manager.py  test_mask2annotation.py
tomni/annotation_manager/utils/: __init__.py  main.py  test_utils.py
tomni/bbox_fitting/: __init__.py
tomni/bbox_fitting/bbox_fitting/: __init__.py  main.py  test_bbox_fitting.py
tomni/bbox_fitting/bbox_fitting_center/: __init__.py  main.py  test_bbox_fitting_center.py
tomni/bbox_fitting/bbox_fitting_center_by_scale/: __init__.py  main.py  test_bbox_fitting_center_by_scale.py
tomni/bbox_operations/: __init__.py
tomni/bbox_operations/check_overlap_bbox/: __init__.py  main.py  test_check_overlap_bbox.py
tomni/contour_operations/: __init__.py
tomni/contour_operations/circularity/: main.py  (+2 more)
tomni/convert_color/: main.py  test_colorConvert.py
tomni/cytosmart_data_format/: DevReadme.md  __init__.py  main.py  test_cdf.py  test_cytosmart_data_format.py
tomni/illumination_correction/: __init__.py
tomni/img_center_crop/: __init__.py
tomni/img_dim/: __init__.py  main.py  test_imgDim.py
tomni/img_paste/: __init__.py  main.py  test_img_paste.py
tomni/json_operations/: __init__.py
tomni/label_converter/: __init__.py  main.py
tomni/make_mask/: __init__.py
tomni/polygon_downsampling/: __init__.py
tomni/scf_format/: __init__.py  main.py
tomni/shape_fitting/: __init__.py
tomni/standard_cytosmart_format/: __init__.py  main.py  test_scf.py
tomni/transformers/: __init__.py
(+235 files in other folders)
