[project]
name = "tomni"
dynamic = ["version"]
dependencies = [
  "Numpy>=2.0.0, <3",
  "opencv-python-headless>=4.10.0.84, <5",
  "numpy_indexed>=0.3.5, <0.4",
  "scipy>=1.4.1, <2",
  "simplification>=0.7.12, <1",
  "Shapely>=2, <3",
]
readme = "README.md"
keywords = ["crlf", "lf", "line-ending", "checker"]
license = { text = "Apache License" }
requires-python = ">=3.8"
authors = [
  { name = "Tom Nijhof" },
  { name = "Bram van der Velden", email = "bram.vandervelden@axionbio.com" },
  { name = "Jelle van Kerkvoorde" }
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
test = [
    "black>=24.4.2,<25",
    "pytest>=8.3.1,<9",
]

[tool.hatch.build.targets.wheel]
only-include = ["tomni"]
sources = ["tomni"]

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tomni/__init__.py"
